--- a/BinWatch/BinWatch/Base.lproj/Main.storyboard
+++ b/BinWatch/BinWatch/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Fill Levels-->
@@ -16,22 +17,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Implement To Show list of bins" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="KQZ-1w-vlD">
-                                <rect key="frame" x="185" y="290" width="230" height="20"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="5I7-nm-zMw">
+                                <rect key="frame" x="16" y="64" width="584" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="d6x-O0-MeX"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="6rc-G3-T0J">
+                                <rect key="frame" x="16" y="108" width="568" height="443"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="9pv-A4-QxB" id="WHz-xs-7O7"/>
+                                    <outlet property="delegate" destination="9pv-A4-QxB" id="7u2-5q-aTb"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="KQZ-1w-vlD" secondAttribute="centerX" id="6BV-lF-sBN"/>
-                            <constraint firstAttribute="centerY" secondItem="KQZ-1w-vlD" secondAttribute="centerY" id="exm-UA-ej4"/>
+                            <constraint firstItem="5I7-nm-zMw" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="3Aj-4K-uQA"/>
+                            <constraint firstItem="6rc-G3-T0J" firstAttribute="top" secondItem="5I7-nm-zMw" secondAttribute="bottom" id="DSF-yb-wPh"/>
+                            <constraint firstItem="6rc-G3-T0J" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" id="e4n-Ph-1y6"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="6rc-G3-T0J" secondAttribute="trailing" id="hNa-i5-KWH"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="5I7-nm-zMw" secondAttribute="trailing" constant="-16" id="iTe-yX-b9H"/>
+                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="6rc-G3-T0J" secondAttribute="bottom" id="pQx-gp-hww"/>
+                            <constraint firstItem="5I7-nm-zMw" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" id="xh0-RP-gbP"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Fill Levels" id="0ks-ZA-TN1"/>
                     <connections>
+                        <outlet property="searchBar" destination="5I7-nm-zMw" id="j5Y-Pc-exK"/>
+                        <outlet property="tableView" destination="6rc-G3-T0J" id="T9b-nK-xub"/>
                         <segue destination="3Cs-K8-XAr" kind="showDetail" id="OKb-b4-nuh"/>
                     </connections>
                 </viewController>
